Simplify the feature store